--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "name": "weather",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
